# ML_Engineering_Infra

./: .env  README.md  students.csv  tags
.github/workflows/: build-image.yaml  deploy-infra.yaml  oidc-check.yaml  release.yaml
cloudformation/: main.yaml  mlflow-sqlite.yaml
docker/: Dockerfile
kit/: README.md  add_students.sh  bootstrap_feast_user.sh  install_host.sh
mlflow_test/: README.md  basic_test.py  pyproject.toml
scripts/: deploy.sh
