[project]
name = "mlflow-test"
version = "0.1.0"
description = ""
authors = [
    {name = "David E. Weirich",email = "weirich.david@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "mlflow (==3.4.0)",
    "boto3 (>=1.40.36,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
